--- a/airline.ipynb
+++ b/airline.ipynb
@@ -1246,6 +1246,42 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2026-02-05T17:29:58.567546Z",
+     "start_time": "2026-02-05T17:29:57.995484Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df['airport_name'].value_counts()",
+   "id": "42bb3de9890fee6d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "airport_name\n",
+       "Detroit, MI: Detroit Metro Wayne County         3022\n",
+       "Los Angeles, CA: Los Angeles International      2990\n",
+       "Las Vegas, NV: McCarran International           2978\n",
+       "Kansas City, MO: Kansas City International      2967\n",
+       "Pittsburgh, PA: Pittsburgh International        2950\n",
+       "                                                ... \n",
+       "Kansas City, MO: Charles B. Wheeler Downtown       1\n",
+       "Greenville, MS: Greenville Mid Delta               1\n",
+       "Rapid City, SD: Ellsworth AFB                      1\n",
+       "Spokane, WA: Fairchild AFB                         1\n",
+       "Columbus, MS: Columbus AFB                         1\n",
+       "Name: count, Length: 420, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 46
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2026-02-05T16:43:23.777963300Z",
      "start_time": "2026-02-05T16:43:23.674116500Z"
     }
