--- a/airline.ipynb
+++ b/airline.ipynb
@@ -1742,6 +1742,70 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2026-02-05T17:44:08.632501400Z",
+     "start_time": "2026-02-05T17:44:08.549720800Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df['total_delay_ct'].describe()",
+   "id": "cf35608d0c7a06f3",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    318010.000000\n",
+       "mean         72.790840\n",
+       "std         198.724075\n",
+       "min           0.000000\n",
+       "25%           9.000000\n",
+       "50%          23.000000\n",
+       "75%          56.000000\n",
+       "max        6377.000000\n",
+       "Name: total_delay_ct, dtype: float64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 47
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-05T17:44:43.614049800Z",
+     "start_time": "2026-02-05T17:44:43.098133200Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df['arr_delay'].describe()",
+   "id": "e1fb7545f340fbfd",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    318010.000000\n",
+       "mean       4205.359061\n",
+       "std       12509.983551\n",
+       "min           0.000000\n",
+       "25%         437.000000\n",
+       "50%        1201.000000\n",
+       "75%        3075.000000\n",
+       "max      433687.000000\n",
+       "Name: arr_delay, dtype: float64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 48
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2026-02-05T17:02:06.556321700Z",
      "start_time": "2026-02-05T17:02:05.711791400Z"
     }
